# rust-fullstack-example

./: Cargo.toml  README.md
backend/: .env.sample  Cargo.toml  README.md
backend/migrations/: 20240829040656_test.sql
backend/src/: handlers.rs  main.rs
backend/src/handlers/: mod.rs  product_handler.rs
backend/src/models/: mod.rs  product.rs
backend/src/repository/: mod.rs  product_repository.rs
backend/src/services/: mod.rs  product_service.rs
backend/tests/: mod.rs  product_service_tests.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: form.rs  main.rs  products.rs  router.rs
