[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.5"
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "json", "mysql", "macros"] }
serde = "1.0.208"
serde_json = "1.0.125"