[package]
name = "yew-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = "1.0.209"
serde_json = "1.0.127"
wasm-bindgen-futures = "0.4.43"
reqwest = { version = "0.12.7", features = ["json"] }
web-sys = { version = "0.3.70", features = ["HtmlInputElement"] }
gloo-console = "0.3.0"
yew-router = "0.18"
